<resources>
    <string name="app_name">lowkeyfinal</string>
    <string name="no_network_message">Check if you\'re connected to the Internet!</string>
    <string name="already_in_queue_message">You are already in queue!</string>
    <string name="get_help_string">The person you will be talking is a volunteer who wants to help, listen,
    and motivate. You can talk about any issue you have, any struggle you have or even
    what your cat is doing. You can end the conversation anytime you want if you think the person you\'re talking to doesn\'t help you that much
    .</string>
    <string name="help_others_string">Earn points by talking and helping other people with their issues. </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_empty_email_field">No email provided!</string>
    <string name="error_empty_password_field">No password provided!</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="invalid">Invalid</string>
    <string name="error_incorrect_credentials">This password or email is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_name">Username</string>
    <string name="reg">REGISTER</string>
    <string name="back">Go Back</string>
    <string name="sign">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="terms">By loging you agree to our Terms and Conditions</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">CHAT</string>
    <string name="tab_text_2">CONTACTS</string>
    <string name="tab_text_3">PROFILE</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings1">Log Out</string>
    <string name="action_settings2">About</string>
    <string name="or">OR</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="problemo">Ti s-a urcat barcelona la cap? Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ac lorem id ligula posuere iaculis at id velit. Nulla quis lectus nec nisi iaculis sodales malesuada vel risus. Aenean sagittis odio non es</string>
    <string name="field_empty">Field empty</string>
    <string name="login_failed">The username or password is invalid.</string>
    <string name="register_email">Enter email</string>
    <string name="register_username">Enter username</string>
    <string name="register_password">Enter password</string>
    <string name="register_password2">Validate password</string>
    <string name="register_btn">Continue</string>
    <string name="register_invalid_email">Invalid email</string>
    <string name="register_invalid_password_error">Invalid password</string>
    <string name="register_invalid_password_toast">The password must contain small letters, big letters and numbers and be at least 6 letters long</string>
    <string name="register_passwords_not_match">Passwords do not match</string>
    <string name="register_username_empty">Username empty</string>
    <string name="register_account_created">Account created successfully</string>
    <string name="register_validation_message">Check your email to validate your account.</string>
    <string name="confirm_email">Enter email</string>
    <string name="confirm_btn_continue">Continue</string>
    <string name="confirm_code">Enter code</string>
    <string name="confirm_btn_validate">Validate</string>
    <string name="confirm_btn_login">Click here to confirm your account!</string>
    <string name="confirm_success_message">Your account has been confirmed successfully!</string>
    <string name="forgot_successfully_message">Your password has been changed successfully!</string>
    <string name="forgot_code">Enter code</string>
    <string name="forgot_btn_validate">Validate</string>
    <string name="forgot_btn_login">Forgot your password. Click here!</string>
    <string name="forgot_check_email_message">Check your email to see your code.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="edit_username">Username</string>
    <string name="edit_name">Name</string>
    <string name="edit_phone">Phone(ex. +40732509516)</string>
    <string name="edit_btn_save">Save</string>
    <string name="edit_success_message">You have changed your account successfully!</string>
    <string name="edit_fail_message">There were problems while updating your profile!</string>
    <string name="forgot_p_old_pass">Old password</string>
    <string name="forgot_p_new_pass1">New password</string>
    <string name="forgot_p_new_pass2">Validate password</string>
    <string name="forgot_p_btn">Save</string>
    <string name="forgot_p_old_new_pass_equal_toast">New password cannot be the same with old password.</string>
    <string name="forgot_p_old_new_pass_equal_error">The same</string>
    <string name="forgot_p_old_pass_wrong_toast">Your old password does not match!</string>
    <string name="forgot_p_old_pass_wrong_error">Not matching old password</string>
    <string name="forgot_p_on_success_message_">Password changed successfully!</string>
    <string name="nf_no_posts">There are no available posts.</string>
    <string name="nf_no_more_posts">There are no more posts available.</string>
    <string name="project_number"></string>
    <string name="introduction">Welcome! </string>
    <string name="clear_screen">Clear Screen</string>
    <string name="first_launch">First Launch</string>
    <string name="num_of_missed_messages">MissedMessageCount</string>
    <string name="lines_of_message_count">LinesOfMessageCount</string>
    <string name="preferences">PreferencesFile</string>
    <string name="notification_number">1337</string>
    <string name="About">   Hi! We are Sandru Sebastian and Paul Iusztin, two individuals
        with passion for creating and designing software products for people. We truly
        believe that throw software we can help peoples live.\n
            This app is design to help us to pour out all our thoughts without feeling judged.
        When we go to a psychologist we think that they only say what we want to hear because we pay
        them. This is not the case. We want normal people to help each other. To communicate and help
        each others as we are meant to be, as human beings. Not to be helped only for money,
        but for compassion.\n
            We began to develop mobile applications as a hobby, nothing more. This is our first major
        project we have been working on, we do not expect nothing in back, but
        satisfaction for the usage of our app.</string>
    <string name="circleimagelicense">
        The following software may be included in this product: CircleImageView.This software contains the following license and notice bellow : \n \n

        Copyright 2014 - 2018 Henning Dodenhof \n

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at \n\n

    http://www.apache.org/licenses/LICENSE-2.0 \n\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="texfield">
        The following software may be included in this product: MaterialTextField.This software contains the following license and notice bellow : \n \n

        Copyright 2015 Florent CHAMPIGNY, Inc.\n

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n

   http://www.apache.org/licenses/LICENSE-2.0\n\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="ken">
        The following software may be included in this product: KenBurnsView.This software contains the following license and notice bellow : \n \n

        Copyright 2015 Flávio Faria, Inc.\n

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n

   http://www.apache.org/licenses/LICENSE-2.0\n\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>
</resources>