<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@android:color/white"
 >

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/back"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="@color/lightGreen"
                android:elevation="15dp"
                android:text="BACK"
                android:textColor="@android:color/white"

                app:layout_constraintBottom_toTopOf="@+id/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:src="@drawable/firebase" />

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_image="@drawable/selprofile"
                app:mtf_labelColor="#666">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="15dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black" />

            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_image="@drawable/selprofile"
                app:mtf_labelColor="#666">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="15dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black" />
            </com.github.florent37.materialtextfield.MaterialTextField>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="@color/lightGreen"
                android:elevation="15dp"
                android:text="@string/sign"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingTop="15dp"
                android:text="@string/or"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/Sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingTop="25dp"
                android:text="@string/signup"
                android:textColor="@color/darkerGreen"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvConfirmCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingTop="25dp"
                android:text="@string/confirm_btn_login"
                android:textColor="@color/darkerGreen"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingTop="25dp"
                android:text="@string/forgot_btn_login"
                android:textColor="@color/darkerGreen"
                android:textSize="12sp"
                android:textStyle="normal" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>