<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >


    <com.flaviofaria.kenburnsview.KenBurnsView
        android:id="@+id/kenBurnsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/qbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="Enter your Lowkey email that you used to register. We'll send you an email with a code to get back your password."
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="Forgot password"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        tools:context=".auth.ForgotPasswordActivity">

        <LinearLayout
            android:id="@+id/llFirstStep"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="16dp">


            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:mtf_image="@drawable/selprofile"
                app:mtf_labelColor="#FFF">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/confirm_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="15dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black" />
            </com.github.florent37.materialtextfield.MaterialTextField>

            <Button
                android:id="@+id/btnContinue"
                style="?android:textAppearanceSmall"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="@android:color/white"
                android:elevation="15dp"
                android:text="@string/confirm_btn_continue"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/llSecondStep"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:mtf_image="@drawable/selprofile"
                app:mtf_labelColor="#FFF">

                <EditText
                    android:id="@+id/etCode"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/forgot_code"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="15dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black" />
            </com.github.florent37.materialtextfield.MaterialTextField>


            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:mtf_image="@drawable/selprofile"
                app:mtf_labelColor="#FFF">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/register_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="15dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black" />
            </com.github.florent37.materialtextfield.MaterialTextField>


            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:mtf_image="@drawable/selprofile"
                app:mtf_labelColor="#FFF">

                <EditText
                    android:id="@+id/etPassword2"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/register_password2"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="15dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black" />
            </com.github.florent37.materialtextfield.MaterialTextField>

            <Button
                android:id="@+id/btnFinish"
                style="?android:textAppearanceSmall"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="@android:color/white"
                android:elevation="15dp"
                android:text="@string/forgot_btn_validate"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>